--- a/03-react-issues/src/App.css
+++ b/03-react-issues/src/App.css
@@ -7,12 +7,12 @@ table {
 th,
 td {
   padding: 0.5em;
-  border: 2px solid #a040ba;
+  border: 2px solid #ebeae9;
 }
 
 th {
   font-weight: bold;
-  background-color: #a417a0;
+  background-color: #e25add;
 }
 
 td {
@@ -33,6 +33,6 @@ a:hover {
 }
 
 .search-container {
-  text-align: center; /* Agrega el estilo de alineación centrada */
+  text-align: center;
   margin-bottom: 1em;
 }
