--- a/03-react-issues/src/App.css
+++ b/03-react-issues/src/App.css
@@ -36,3 +36,14 @@ a:hover {
   text-align: center;
   margin-bottom: 1em;
 }
+
+.label {
+  display: inline-block;
+  padding: 4px 8px;
+  margin-right: 4px;
+  border-radius: 4px;
+  background-color: #7e2e6d;
+  color: #FFFFFF; 
+  font-size: 12px;
+  font-weight: bold;
+}
