--- a/03-react-issues/src/App.css
+++ b/03-react-issues/src/App.css
@@ -1,30 +1,57 @@
+body {
+   background: linear-gradient(
+    45deg,
+    rgba(230, 131, 170, 1) 34%,
+    rgba(247, 181, 203, 1) 82%
+  );
+  background-blend-mode: normal;
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
   margin-bottom: 1em;
 }
 
+.table-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 th,
 td {
-  padding: 0.5em;
-  border: 2px solid #ebeae9;
+  padding: 0.7em;
 }
 
 th {
-  font-weight: bold;
-  background-color: #e25add;
+  border: 2px dashed rgba(255, 255, 255, 1);
+  background: linear-gradient(
+    68deg,
+    rgb(124, 50, 119) 15%,
+    rgb(188, 57, 144) 82%
+  );
+  background-blend-mode: normal;
+  color: rgba(247, 201, 244, 0.958);
 }
 
 td {
   text-align: left;
+  background-color: rgba(255, 213, 240, 0.936);
+  border: 2px dashed rgb(144, 37, 137);
+  background-blend-mode: normal;
+  color: rgb(144, 37, 137);
 }
 
 .title {
-  text-align: center; 
+  text-align: center;
+  font: italic bolder 60px/1.2 "Souci Sans";
+  letter-spacing: 0px; 
+  color: rgb(144, 37, 137);
 }
 
 a {
-  color: #bc11c5;
+  color: rgb(144, 37, 137);
   text-decoration: none;
 }
 
@@ -34,7 +61,18 @@ a:hover {
 
 .search-container {
   text-align: center;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
+}
+
+.search-input {
+  width: 200px;
+  font-size: 14px;
+  background-color: transparent;
+  border: 2px solid rgb(128, 52, 96);
+  color: rgb(128, 52, 96);
+  padding: 15px 20px;
+  border-radius: 10px 0px 10px 0px;
+  
 }
 
 .label {
@@ -42,8 +80,8 @@ a:hover {
   padding: 4px 8px;
   margin-right: 4px;
   border-radius: 4px;
-  background-color: #7e2e6d;
-  color: #FFFFFF; 
+  background-color:  rgba(230, 131, 170, 1);
+  color: rgba(255, 225, 244, 0.936);
   font-size: 12px;
   font-weight: bold;
 }
